# course_work5

./: README.md  config.py  main.py  pyproject.toml
src/: DBManager.py  hh_API.py  utils.py
